# weather-monitor

./: .dockerignore  .env-example  .flowstate  .gitignore  Dockerfile-example  LICENSE  README.md  docker-compose.yml-example  entrypoint.sh  manage.py  pyproject.toml  pytest.ini
.github/workflows/: main.yml
core/: config.py  settings.py  settings_dev.py  settings_prod.py
weather/libs/api/: open_weather_map.py  request_flow_controller.py
weather/management/commands/: collect_current_weather.py
weather/managers/: __init__.py  location_manager.py  measure_manager.py
weather/migrations/: 0001_initial.py  0002_city.py  0003_auto_20210825_0151.py  0004_ocean.py  0005_alter_ocean_ocean_id.py  0006_location.py  0007_auto_20210825_0958.py  0008_weather.py  0009_measure.py  0010_alter_measure_wind_gust.py  0011_auto_20210827_0054.py
weather/models/: __init__.py  city.py  country.py  location.py  measure.py  ocean.py  weather.py
weather/models/data/: country_data.json
weather/tests/: conftest.py
weather/tests/__samples__/: weather_fake_data.json
weather/tests/libs/api/unit/: test_open_weather_map.py  test_request_flow_controller.py
weather/tests/management/commands/unit/: test_collect_current_weather.py
weather/tests/models/: test_city.py  test_country.py  test_location.py  test_measure.py  test_ocean.py  test_weather.py
