[tool.poetry]
name = "weather-monitor"
version = "0.1.0"
description = ""
authors = ["Arthuchaut <arthuchaut@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.6"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
python-dotenv = "^0.19.0"
black = "^21.7b0"
pytest-django = "^4.4.0"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
